Starting Checkin Build

--- a/src/app/alert-bar/alert-bar.component.html
+++ b/src/app/alert-bar/alert-bar.component.html
@@ -1,3 +1,8 @@
-<mat-toolbar>
-  <span>My Application</span>
+<mat-toolbar class="full-container">
+  <div>
+    <p class="subheading-1">{{title}}</p>
+  </div>
+  <div id="notification-icon">
+    <i class="material-icons">filter_1</i>
+  </div>
 </mat-toolbar>
