--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-alert-bar></app-alert-bar>
+<app-alert-bar class="grid-inner"></app-alert-bar>
 
-<section>
-
-</section>
+<app-checkin></app-checkin>
 
 <app-main-menu></app-main-menu>
