Basic Checkin layout

--- a/src/app/checkin/ai-bubble/ai-bubble.component.html
+++ b/src/app/checkin/ai-bubble/ai-bubble.component.html
@@ -1,3 +1,16 @@
-<p>
-  ai-bubble works!
-</p>
+<div class="ai-bubble">
+  <div class="full-container">
+    <div class="message">
+        <div class="grid-inner">
+            <div class="ai-message-wrapper">
+                <p>
+                  {{ bubbleMessage }}
+                </p>
+            </div>
+            <div class="quote-direction"></div>
+        </div>
+    </div>
+    
+  </div>
+      
+</div>
