--- a/src/app/checkin/mood-select/mood-select.component.html
+++ b/src/app/checkin/mood-select/mood-select.component.html
@@ -1,3 +1,18 @@
-<p>
-  mood-select works!
-</p>
+<div class="grid-inner">
+  <div class="full-container">
+
+    <div id="mood-selector">
+      O
+    </div>
+
+    <div id="mood-title">
+      <h2>Pretty OK</h2>
+      <p>[Fine, Normal, Chill, Nothing new...]</p>
+    </div>
+
+    <button mat-raised-button color="primary">
+      Yeah, that's it!
+    </button>
+
+  </div>
+</div>>
