--- a/src/assets/theme/pulse-1.0/_typography.scss
+++ b/src/assets/theme/pulse-1.0/_typography.scss
@@ -22,7 +22,7 @@
 
 
 $heading-typography: mat-typography-config(
-  $font-family:   'Roboto Slab, serif',
+  $font-family:   'Montserrat, sans-serif',
   $display-4:     mat-typography-level(64px, 72px, 300),
   $display-3:     mat-typography-level(56px, 64px, 300),
   $display-2:     mat-typography-level(48px, 56px, 300),
@@ -39,7 +39,7 @@ $heading-typography: mat-typography-config(
   $input:         mat-typography-level(16px, 1.125, 300)
 );
 $body-typography: mat-typography-config(
-  $font-family:   'Lato, sans-serif',
+  $font-family:   'Montserrat, sans-serif',
   $display-4:     mat-typography-level(64px, 72px, 300),
   $display-3:     mat-typography-level(56px, 64px, 300),
   $display-2:     mat-typography-level(18px, 24px, 700),
@@ -104,7 +104,8 @@ $body-typography: mat-typography-config(
 }
 
 
-.mat-body p, .mat-body-1 p, .mat-typography p {
+.mat-body p, .mat-body-1, .mat-typography p,
+.mat-typography .mat-body-1, .mat-typography {
   @include create-heading($body-typography, body-1);
 }
 .mat-body-2 p, .mat-typography .mat-body-2,
