--- a/src/app/alert-bar/alert-bar.component.scss
+++ b/src/app/alert-bar/alert-bar.component.scss
@@ -1,4 +1,5 @@
 @import 'color';
+@import 'typography';
 
 .mat-toolbar {
     background-color: #0548D9;
@@ -6,19 +7,23 @@
 .mat-toolbar-row, .mat-toolbar-single-row{
     height:2em
 }
-mat-toolbar {
+mat-toolbar.mat-toolbar {
+    @include create-heading($body-typography, body-1);
+
     > div {
         width: 100%;
     }
-    padding: 0.2em 4em;
+    padding: 0.2em 3em;
     p {
         text-align: center;
         margin: 0;
         color: white;
+        font-size: .8em;
+        font-weight: 300;
     }
     #notification-icon {
         position: absolute;
-        right: 1em;
+        right: 0em;
         top: .2em;
         width: 2em;
         color: white;
