--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-alert-bar class="grid-inner"></app-alert-bar>
 
-<app-checkin></app-checkin>
+<router-outlet></router-outlet>
 
 <app-main-menu></app-main-menu>
