--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -3,7 +3,7 @@
   
       <h1>Help</h1>
       <ul>
-        <li>Dad</li>
+        <li><span></span>Dad</li>
         <li>Mom</li>
         <li>Poppy</li>
       </ul>
