--- a/src/app/main-menu/main-menu.component.scss
+++ b/src/app/main-menu/main-menu.component.scss
@@ -7,7 +7,7 @@
     bottom: 0;
     width: 100%;
     height: auto;
-    background-color: $surface;
+    background-color: $surface-40;
 }
 .main-menu-wrapper {
     max-width: 900px;
