top margin for main wrapper

--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -1,14 +1,20 @@
 <div class="grid-inner">
-    <div class="full-container">
+    <div class="full-container help-container">
   
       <h1>Help</h1>
+      <!-- Family and Friends -->
       <ul>
-        <li><span></span>Dad</li>
+        <li class="contact">
+          <span class="avatar"></span>
+          <div class="contact-wrapper">
+            <p>Dad</p>
+            <i class="material-icons">call</i>
+          </div></li>
         <li>Mom</li>
         <li>Poppy</li>
       </ul>
       <mat-divider></mat-divider>
-  
+      <!-- Emergency/911/School -->
       <ul>
         <li>911</li>
         <li>School Councilor</li>
