--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -28,7 +28,7 @@
           <mat-icon>perm_identity</mat-icon>
         </button>
         <mat-label>
-            <a routerLinkActive="active" routerLink="account">My Account</a></mat-label>
+            <a routerLinkActive="active" routerLink="account">Account</a></mat-label>
       </li>
     </ul>
     
