--- a/src/app/tip/tip.component.html
+++ b/src/app/tip/tip.component.html
@@ -1,5 +1,5 @@
 <div class="grid-inner">
-    <div class="full-container">
+    <div class="full-container tip-container">
   
   
       <h1>Report Tip</h1>
