--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,8 +1,8 @@
 <div class="grid-inner">
-    <div class="full-container">
+    <div class="full-container account-container">
   
   
-      <h1>My Account Page</h1>
+      <h1>My Account</h1>
   
   
     </div>
