--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -1,3 +1,10 @@
-h1 {
+@import 'mixins';
+
+.account-container {
     margin-top: 2em;
+}
+
+h1 {
+    margin-top: .5em;
+    padding-left: .5em;
 }
