--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,9 @@ body {
     height: 100%;
     min-height: 100%;
 }
-
+ul, li, div, span, p, {
+  box-sizing: border-box;
+}
 .grid-inner {
     @include mdc-inner();
   }
