--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-alert-bar class="grid-inner"></app-alert-bar>
+<app-alert-bar></app-alert-bar>
 
 <router-outlet></router-outlet>
 
