--- a/src/app/checkin/ai-bubble/ai-bubble.component.html
+++ b/src/app/checkin/ai-bubble/ai-bubble.component.html
@@ -1,4 +1,4 @@
-<div class="ai-bubble">
+<div class="ai-bubble grid-inner max-grid">
   <div class="full-container">
     <div class="message">
         <div class="grid-inner">
@@ -11,6 +11,5 @@
         </div>
     </div>
     
-  </div>
-      
+  </div>   
 </div>
