--- a/src/app/checkin/checkin.component.html
+++ b/src/app/checkin/checkin.component.html
@@ -1,15 +1,14 @@
-<div class="checkin-wrapper grid-inner">
+<div class="checkin-wrapper">
   <div class="full-container">
-    
-    <app-ai-bubble>
-      <p>How are you feeling today?</p>
-    </app-ai-bubble>
-
-    <app-mood-select>
-
-    </app-mood-select>
-
-
+          
+      <app-ai-bubble>
+        <p>How are you feeling today?</p>
+      </app-ai-bubble>
+  
+      <app-mood-select>
+  
+      </app-mood-select>
+        
 
   </div>
 </div>
