--- a/src/app/alert-bar/alert-bar.component.html
+++ b/src/app/alert-bar/alert-bar.component.html
@@ -1,8 +1,18 @@
-<mat-toolbar class="full-container">
-  <div>
-    <p class="subheading-1">{{title}}</p>
+<div class="header grid-inner">
+  <div class="full-container">
+
+    <div class="grid-inner max-grid">
+      <mat-toolbar class="full-container">
+        <div class="header-wrapper">
+          <div>
+            <p class="subheading-1">{{title}}</p>
+          </div>
+          <div id="notification-icon">
+            <i class="material-icons">filter_1</i>
+          </div>
+        </div>
+      </mat-toolbar>
+    </div>
+
   </div>
-  <div id="notification-icon">
-    <i class="material-icons">filter_1</i>
-  </div>
-</mat-toolbar>
+</div>
