--- a/src/app/checkin/checkin.component.scss
+++ b/src/app/checkin/checkin.component.scss
@@ -1,9 +1,16 @@
+@import 'mixins';
+
 .checkin-wrapper {
+    @include mdc-inner();
     height: 100%;
     min-height: 100%;
     background-color: #0012A5;
-    color: white;
     text-align: center;
     padding-top: 2em;
     padding-bottom: 7em;
+
+    .grid-inner {
+        max-width: 480px;
+        margin: 0 auto;
+    }
 }
