--- a/src/app/checkin/mood-select/mood-select.component.scss
+++ b/src/app/checkin/mood-select/mood-select.component.scss
@@ -2,8 +2,29 @@
 @import 'mixins';
 @import 'typography';
 
+
+// Mood Select
+#mood-select {
+    margin-top: 2em;
+    svg {
+        #base-circ {
+            fill: rgb(0, 18, 165); 
+            stroke-linecap: round; 
+            stroke-miterlimit: 12; 
+            stroke: rgb(0, 0, 0); 
+            stroke-width: 12px;
+        }
+    }
+}
+mat-slider {
+width: 300px;
+}
+
+
+
+
+
 .degrees-wrapper {
-    @include mdc-inner();
     padding: 1em;
 }
 #degrees {
@@ -17,10 +38,11 @@
         font-size: .9em;
     }
 }
+
 .mood-details {
-    @include mdc-inner();
     margin-bottom: 2em;
 }
+
 #mood-title {
     @include mdc-inner();
     h2 {
@@ -34,6 +56,7 @@
             width: 2em;
             display: inline-block;
             vertical-align: middle;
+            color: $light-primary-text;
         }
     }
     p {
@@ -49,5 +72,4 @@ button {
     padding: 0 3em;
     text-transform: uppercase;
     background-color: $accent;
-    color: $light-primary-text;
 }
