toying with svg ideas

--- a/src/app/checkin/checkin.component.html
+++ b/src/app/checkin/checkin.component.html
@@ -5,9 +5,7 @@
         <p>How are you feeling today?</p>
       </app-ai-bubble>
   
-      <app-mood-select>
-  
-      </app-mood-select>
+      <app-mood-select (mouseover)="displayPosition($event)"></app-mood-select>
         
 
   </div>
